--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>Ma<span style="color: yellowgreen;">r</span>y</h1>
-
+        <nav>
+            <h1>Ma<span class="clolor-orange">r</span>y</h1>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <button class="btn-primary"><a href="">Hire Me</a></button>
+            </ul>
+        </nav>
     </header>
     <main>
 
@@ -17,4 +26,5 @@
 
     </footer>
 </body>
+
 </html>
