--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
+    <header id="background-header">
         <nav>
             <h1>Ma<span class="clolor-orange">r</span>y</h1>
             <ul>
@@ -18,6 +21,19 @@
                 <button class="btn-primary"><a href="">Hire Me</a></button>
             </ul>
         </nav>
+        <div class="main-header">
+            <div class="header">
+                <h2>Hi, I am</h2>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary"><a href="">Download Cv</a></button>
+                <button class="contact">Contact</button>
+            </div>
+            <img class="banner-img" src="images/hardy.png" alt="">
+        </div>
+       
+
     </header>
     <main>
 
