added banner img

--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,9 @@
                 <button class="btn-primary"><a href="">Download Cv</a></button>
                 <button class="contact">Contact</button>
             </div>
-            <img class="banner-img" src="images/hardy.png" alt="">
+            <div class="background-img">
+                <img class="banner-img" src="images/hardy.png" alt="">
+            </div>
         </div>
        
 
